Fixed hindi truncation in article listing page

--- a/core/static/css/v2/two_column_grid.less
+++ b/core/static/css/v2/two_column_grid.less
@@ -34,6 +34,7 @@
           font-size: 2.3rem;
           margin: 0px;
           line-height: 1.1;
+          padding-top:10px;
           color: #444444;
           letter-spacing: -0.7px;
           a {
